fix: RSS-PZ-38 avoid horizontal scrollbar in all pages (#60)

--- a/src/app/startScreen/startScreen.css
+++ b/src/app/startScreen/startScreen.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .start_title {
